### 1.0.0 (2020-08-03) * (bluefox) Compact mode * (bluefox) Support of node 10 added * (bluefox) Refactoring

--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,11 @@
-Gruntfile.js
-tasks
-node_modules
-.idea
-.git
-/node_modules
-test
-.travis.yml
-appveyor.yml
+/**/*
+/gulpfile.js
+gulpfile.js
+!/admin/**/*
+!/admin/*
+!/lib/**/*
+!/lib/*
+!/io-package.json
+!/package.json
+!/LICENSE
+!/README.md
