--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -36,7 +36,7 @@ jobs:
 
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm i
 
 #      - name: Perform a type check
 #        run: npm run check:ts
@@ -67,7 +67,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm i
 
       - name: Run local tests
         run: npm test
