--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "devDependencies": {
     "@iobroker/testing": "^2.4.4",
-    "@alcalzone/release-script": "^2.0.0",
+    "@alcalzone/release-script": "^2.2.0",
+    "axios": "^0.21.1",
     "gulp": "^4.0.2",
     "mocha": "^9.0.1",
     "chai": "^4.3.4",
