--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   },
   "devDependencies": {
     "@iobroker/testing": "^2.5.2",
-    "@alcalzone/release-script": "^2.2.1",
+    "@alcalzone/release-script": "^3.4.1",
+    "@alcalzone/release-script-plugin-iobroker": "^3.4.1",
+    "@alcalzone/release-script-plugin-license": "^3.4.1",
     "axios": "^0.24.0",
     "gulp": "^4.0.2",
     "mocha": "^9.1.3",
@@ -42,6 +44,14 @@
     "url": "https://github.com/ioBroker/ioBroker.rfxcom/issues"
   },
   "main": "main.js",
+  "files": [
+    "admin/",
+    "!admin/i18n/*/translations.json",
+    "lib/",
+    "io-package.json",
+    "LICENSE",
+    "main.js"
+  ],
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --exit",
     "release": "release-script"
