--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
   ],
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha --exit",
-    "release": "release-script"
+    "release": "release-script patch --yes",
+    "release-minor": "release-script minor --yes"
   },
   "readmeFilename": "README.md"
 }
